--- a/app/src/main/res/layout/mock_row.xml
+++ b/app/src/main/res/layout/mock_row.xml
@@ -19,6 +19,7 @@
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:text="Grade 3"
@@ -28,21 +29,22 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text="No score"
-            android:textColor="#000000"
-            android:textSize="22dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
+<!--        <TextView-->
+<!--            android:id="@+id/status"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:text="No score"-->
+<!--            android:textColor="#000000"-->
+<!--            android:textSize="22dp"-->
+<!--            android:gravity="center"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginBottom="10dp" />-->
         <TextView
             android:id="@+id/questions"
             android:layout_width="wrap_content"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="15dp"
